# west-bank-of-timisoara

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data.csv  login.c
data/: data.csv  exchange_rates.csv
include/: account_operations.h  helpers.h  menus.h  print.h
src/: account_operations.c  helpers.c  login.c  menus.c  print.c
src/auth/: auth.c  auth.h
src/auth_success/: auth_success.c  auth_success.h
src/new_account/: new_account.c  new_account.h
src/user_inputs/: user_inputs.c  user_inputs.h
